[gd_scene load_steps=13 format=3 uid="uid://1n33d2eqs83e"]

[ext_resource type="Texture2D" uid="uid://6ddouponlmb8" path="res://assets/slime.png" id="1_76eej"]
[ext_resource type="Script" path="res://scenes/slime/slime.gd" id="1_tdb32"]

[sub_resource type="CircleShape2D" id="CircleShape2D_g755i"]
radius = 8.06226

[sub_resource type="Animation" id="Animation_erdwx"]
resource_name = "attack"
length = 1.03
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [14, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_36mgm"]
resource_name = "hit"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [21, 22, 23]
}

[sub_resource type="Animation" id="Animation_5tthc"]
resource_name = "death"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31, 32, 33]
}

[sub_resource type="Animation" id="Animation_vbobd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}

[sub_resource type="Animation" id="Animation_xs7br"]
resource_name = "move_left"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10, 11, 12]
}

[sub_resource type="Animation" id="Animation_irwxl"]
resource_name = "idle"
length = 0.25
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.12, 0.24),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8esab"]
_data = {
"RESET": SubResource("Animation_vbobd"),
"attack": SubResource("Animation_erdwx"),
"death": SubResource("Animation_5tthc"),
"hit": SubResource("Animation_36mgm"),
"idle": SubResource("Animation_irwxl"),
"move": SubResource("Animation_xs7br")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_0wfmd"]
radius = 107.019

[sub_resource type="CircleShape2D" id="CircleShape2D_8ur3k"]
radius = 38.0132

[node name="Slime" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_tdb32")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_g755i")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_76eej")
hframes = 7
vframes = 5
frame = 14

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8esab")
}

[node name="ChaseField" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChaseField"]
shape = SubResource("CircleShape2D_0wfmd")

[node name="AttackField" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackField"]
shape = SubResource("CircleShape2D_8ur3k")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="ChaseField" to="." method="_on_chase_field_body_entered"]
[connection signal="body_exited" from="ChaseField" to="." method="_on_chase_field_body_exited"]
[connection signal="body_entered" from="AttackField" to="." method="_on_attack_field_body_entered"]
[connection signal="body_exited" from="AttackField" to="." method="_on_attack_field_body_exited"]
